--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Inter+Tight:wght@300;400;500;700&display=swap');
+
+.link-underline {
+        border-bottom-width: 0;
+        background-image: linear-gradient(transparent, transparent), linear-gradient(#fff, #fff);
+        background-size: 0 3px;
+        background-position: 0 100%;
+        background-repeat: no-repeat;
+        transition: background-size .2s ease-in-out;
+}
+
+.link-underline-black {
+        background-image: linear-gradient(transparent, transparent), linear-gradient(rgb(68, 144, 2), rgb(103, 205, 89))
+}
+
+.link-underline:hover {
+        background-size: 100% 3px;
+        background-position: 0 100%
+}
